--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -159,10 +159,7 @@ a img {
 	display: block;
 	padding: 0 30px 0 10px;
 	background: url(../images/arrowdown.png) 160px center no-repeat;
-}
-
-#menubutton a:first-letter {
-	text-transform: uppercase;
+	text-transform: capitalize;
 }
 
 #menu #menulist ul {
@@ -293,7 +290,7 @@ a img {
 	right: 40px;
 }
 
-#page .dropbutton:hover {
+#page .dropbutton:hover, #page .dropbutton.hovering {
 	z-index: 99;
 }
 
@@ -1141,16 +1138,14 @@ body.page-publish .buttons input {
 }
 
 .dashboard .module.add-item-module .modulecore {
-	height: 0px;
+	height: 75%;
+	padding: 16px 0 0 20px;
+	overflow: auto;
 }
 
 .dashboard .module.add-item-module h2, .dashboard .module.add-item-module form {
-	position: absolute;
-	top: 16px;
-}
-
-.dashboard .module.add-item-module form {
-	left: 120px;
+	float: left;
+	position: static;
 }
 
 .dashboard .module.add-item-module select {
@@ -1744,7 +1739,7 @@ body.page-themes .availablethemes .themeinfo p {
 	margin-bottom: 1em;
 }
 
-body.page-themes #page .availablethemes .dropbutton {
+body.page-themes #page .availablethemes .dropbutton, body.page-themes #page .availablethemes .legacy {
     position: absolute;
     top: 220px;
     right: 73px; /* this is a hack */
@@ -1933,7 +1928,7 @@ body.page-themes .currenttheme .thumb, .description {
 	color: #444444;
 	font-style: italic;
 	margin-top: 3px;
-	padding: 2px;
+	padding: 15px;
 	text-align: center;
 }
 .delete_drop .block_drop {
