--- a/admin/css/ie.css
+++ b/admin/css/ie.css
@@ -7,12 +7,16 @@
  * IE also does not support height: inherit, so we need to explicitly set
  * several heights.
  */
+*+html .timeline {
+	position: static;
+}
 
 .timeline .years {
 	display: block;
 }
 
 .timeline .years .year {
+	position: absolute;
 	display: inline;
 	height: 100%;
 	zoom: 1;
@@ -70,6 +74,8 @@
 	float: right;
 }
 
-#menubutton a:first-letter{
-	color: inherit;
+/* Fix boldface text alpha opacity */
+
+.navigator .newer a, .navigator .older a {
+	background-color: #fafafa;
 }
